В общем пытался исрпавить картинки, не получилось nt, немного пофиксил что-то.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,4 +7,12 @@
             30
         </session-timeout>
     </session-config>
+    <servlet>
+        <servlet-name>UploadServlet</servlet-name>
+        <servlet-class>servlets.UploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/uploadPicture</url-pattern>
+    </servlet-mapping>
 </web-app>
